with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

New Features for 3.21.1
=======================
[2980609] Allow date filters to use relative dates
[2979411] A single entry can now be exported to a text or XML file via the
Edit menu or right-click context menu.
[2957185] Add Synchronize function to the menu options during review of
the results of a Compare database operation.
[] Validation of databases can now be performed via the Manage menu as
well as via the command line flag '-v'. When executed via the menu, it
is very similar to opening a new database in that the current open database
is closed and the selected database is validated during the open process.
[] Allow use to select external editor for Notes field in Add/Edit dialog.
[] Add entry size to the available filters to be able view entries.
[] Warn users during database open and entry import if there are entries
with large text fields (e.g. Notes) that cannot be fully displayed and may
be truncated if edited.

Changes to Existing Features in 3.21.1
======================================
None

Bugs fixed in 3.21.1
====================
[2977941] The password expiry date is now updated during edit if the password
is changed either via the Generate button or by the user manually editing it.
[2977045] Can now make password expiration date any value from the current
date.
[2962916] Save toolbar button only enabled if database is R/W and has been
changed since last saved.
[2962847] Fix password length checking to be between 4 and 1024 during
menu Generate Password option & Password Policy setting as per previous
releases.
[2960709] Entry selected prior to workstation locking is reselected on
being restored after unlocking the workstation.